Fix GAsyncReadyCallback

https://bugzilla.gnome.org/show_bug.cgi?id=616236